# boot2flappy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
src/efi-x86_64/: README.txt  console.s  core.s  event.s  fs.s  graphics.s  image.s
src/game/: main.s  sprites.s
tools/qemu/: start.sh
